<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/drawable_white_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/fontBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center_horizontal"
            android:text="@string/new_group_call"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/tvDesc"
            style="@style/fontRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:text="@string/you_are_invited_in_the_group_call_do_you_want_to_join"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtNo"
                style="@style/fontSemiBold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/txtYes"
                style="@style/fontSemiBold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/join_now"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
