<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.profile.activity.EditProfileActivity">

    <LinearLayout
        android:id="@+id/toolBarEditProfile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/purple_700"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10ssp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back_arrow" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtUserName"
                style="@style/fontSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp" />


        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_below="@+id/toolBarEditProfile"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_user_icon" />


            <RelativeLayout
                android:id="@+id/rlCamera"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/circle_green">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_camera_profile"
                    android:tint="@color/white"
                    android:visibility="visible" />
            </RelativeLayout>
        </FrameLayout>

        <TextView
            style="@style/fontRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/upload_your_profile_picture"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />


        <EditText
            android:id="@+id/edFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25ssp"
            android:background="@drawable/drawable_edit_text_black_line_background"
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/hintcolour"
            android:textSize="@dimen/_15ssp" />

        <EditText
            android:id="@+id/edLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15ssp"
            android:background="@drawable/drawable_edit_text_black_line_background"
            android:hint="@string/last_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/hintcolour"
            android:textSize="@dimen/_15ssp" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15ssp"
            android:alpha="0.5"
            android:background="@drawable/drawable_edit_text_black_line_background"
            android:clickable="false"
            android:editable="false"
            android:focusable="false"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textWebEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/hintcolour"
            android:textSize="@dimen/_15ssp" />

        <EditText
            android:id="@+id/edPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15ssp"
            android:background="@drawable/drawable_edit_text_black_line_background"
            android:hint="@string/phone_number"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:visibility="gone" />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_15ssp"
        android:layout_marginEnd="@dimen/_15ssp"
        android:layout_marginBottom="@dimen/_15ssp"
        android:background="@color/purple_700"
        android:padding="@dimen/_10sdp"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />



</RelativeLayout>