<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/purple_700"
        app:navigationIcon="@drawable/ic_back_arrow"
        app:titleTextColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtHeader"
                style="@style/fontBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_group"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/imgGroupIcon"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_placeholder" />

            <EditText
                android:id="@+id/edtGroupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toEndOf="@+id/imgGroupIcon"
                android:hint="@string/enter_group_name"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgGroupIcon"
                android:layout_marginStart="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/provide_a_group_subject_and_optional_group_icon" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_80sdp"
            android:background="@color/chat_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNumberOfParticipants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/number_of_participants" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPartcipants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgCreateGroup"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_65sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/circle_light_green"
            android:scaleType="center"
            android:src="@drawable/ic_check_black"
            app:tint="@color/white" />


    </FrameLayout>


</LinearLayout>