<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/square_drawable_white_color"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/select_option"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/_12ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/light_gray" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCallList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/view_list_call"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/txt_new_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_7sdp"
            android:text="@string/new_call"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/square_drawable_white_color"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_7sdp"
            android:text="@string/cancel"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>