<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/chat_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/toolBarChat"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/purple_700"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10ssp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back_arrow" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtUserName"
                style="@style/fontSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:id="@+id/txtPresence"
                style="@style/fontRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>


        <ImageView
            android:id="@+id/imgVideoCall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_10sdp"
            android:contentDescription="@string/app_name"
            android:gravity="end"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_video_option" />

        <ImageView
            android:id="@+id/imgGroupInformation"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/_10sdp"
            android:contentDescription="@string/app_name"
            android:gravity="end"
            app:tint="@color/white"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/information" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/input_bar"
        android:layout_below="@+id/toolBarChat"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/chat_background">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvChatMessageList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtNoChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_chat_found"
            android:textColor="@color/black"
            android:textSize="@dimen/_22sdp"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/input_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@android:color/transparent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_toStartOf="@+id/rlSend"
            android:background="@drawable/drawable_chat_background">

            <ImageView
                android:id="@+id/imgCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:src="@drawable/ic_camera_profile" />

            <EditText
                android:id="@+id/edMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/imgCamera"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/type_message"
                android:inputType="textMultiLine"
                android:paddingStart="@dimen/_1sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintcolour"
                android:textSize="@dimen/_13sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlSend"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/drawable_chat_button">

            <ImageView
                android:id="@+id/btnSend"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@drawable/icn_send"
                android:contentDescription="@string/app_name" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
